# stealthrole

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOY.md  DEPLOY_CHEATSHEET.md  DEPLOY_PROD.md  INTEGRATION_MATRIX.md  LOCAL_TESTING.md  Makefile  PRODUCTION_CHECKLIST.md  README.md  ROADMAP.md  START.sh  TESTING_PLAYBOOK.md  alembic.ini  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: config.py  dependencies.py  main.py
automation/: README.md  claude_openclaw_loop.py  claude_openclaw_loop.py.save  run_openclaw_qa.py  run_openclaw_qa.sh
cvlab-frontend/: .env.example  FRONTEND_README.md  index.html  package-lock.json  package.json
docker/: Dockerfile  Dockerfile.migrator  Dockerfile.worker  docker-compose.prod.yml  docker-compose.yml  postgres-init.sql
docs/: OPPORTUNITY_RADAR.md
extension/: manifest.json
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
scripts/: dedup_conversations.py
tests/: test_action_engine.py  test_analytics_ext.py  test_auth.py  test_billing.py  test_cv_builder.py  test_export.py  test_hidden_market_dismiss.py  test_intelligence_decision.py  test_intelligence_e2e.py  test_intelligence_interpretation.py  test_intelligence_outcome.py  test_intelligence_propagation.py  test_intelligence_quality.py  test_interview_prep.py  test_llm.py  test_parser.py  test_profile.py  test_relationship_engine_wayin.py  test_renderer.py  test_run_llm.py  (+5 more)
(+351 files in other folders)
